--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
     "axios": "^1.7.5",
+    "jwt-decode": "^4.0.0",
     "openai": "^4.56.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
